lib_LTLIBRARIES = libtagitem.la

libtagitem_la_SOURCES = \
allocatetagitems.c \
applytagchanges.c \
clonetagitems.c \
filtertagchanges.c \
filtertagitems.c \
findtagitem.c \
freetagitems.c \
gettagdata.c \
maptags.c \
nexttagitem.c \
packbooltags.c \
reallocatetagitems.c \
refreshtagitemclones.c \
taginarray.c

INCLUDES = -I$(top_srcdir)/include $(GLIB_CFLAGS)
